generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
}

model Meeting {
  id        String   @id @default(cuid())
  title     String
  heldAt    DateTime
  createdAt DateTime @default(now())

  // 議事録メタ情報
  meetingType              String  @default("one_time")
  transcriptionQuality     String?
  supplementaryMemo        String?
  transcriptText           String?   // Issue #228 add
  sequenceNumber           Int?
  previousMeetingId        String?
  estimatedDurationMinutes Int?
  estimationNote           String?

  // 紐付く定例。単発会議の場合は null。
  // 定例が削除されても本会議の議事録メタ・タスク・決定事項を残すため SetNull とする。
  recurringMeetingId String?

  // 自己参照リレーション
  previousMeeting Meeting?  @relation("MeetingChain", fields: [previousMeetingId], references: [id])
  nextMeetings    Meeting[] @relation("MeetingChain")

  // 定例リレーション
  recurringMeeting RecurringMeeting? @relation(fields: [recurringMeetingId], references: [id], onDelete: SetNull)

  // リレーション
  speakers             MeetingSpeaker[]
  estimationBreakdowns MeetingEstimationBreakdown[]
  ragDocument          RagDocument?
  currentMeetingRefs   RelatedPastMeeting[]         @relation("CurrentMeeting")
  relatedMeetingRefs   RelatedPastMeeting[]         @relation("RelatedMeeting")
  decisionItems        DecisionItem[]
  decisionItemsPlanned DecisionItem[]               @relation("PlannedMeeting")
  // 当該会議を発生源 (originMeetingId) とするタスク。会議削除時は Task 側 SetNull。
  originTasks          Task[]
  ambiguousInfos       AmbiguousInfo[]
  analysisRuns         MeetingAnalysisRun[]
  // 当該会議を「次回会議」として紐付くユーザー入力議題群。会議削除時は議題ごと削除する。
  topicRequests        TopicRequest[]

  // インデックス
  @@index([previousMeetingId])
  @@index([heldAt])
  @@index([recurringMeetingId])
}

// OIDC 認証で取得したユーザー情報。externalId は IdP の sub を保存する。
model User {
  id          String   @id @default(cuid())
  externalId  String   @unique
  // Entra External ID は email クレームを返さない設定がある。
  // nullable にすることで email なしでもログインを通す。
  // 招待照合（OrganizationInvitation.email との一致）は email がある場合のみ機能する。
  email       String?  @unique
  name        String
  displayName String
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  memberships     OrganizationMembership[]
  invitationsSent OrganizationInvitation[] @relation("InvitedBy")
  meetingMembers  MeetingMember[]

  // 会議の話者情報。話者名とDBユーザーの紐付け状態を管理する。ユーザーが削除された場合も履歴保持のためレコードは残すが、userIdはnullにする。
  meetingSpeakers       MeetingSpeaker[]
  decisionItemsDecided  DecisionItem[]
  decisionItemAssignees DecisionItemAssignee[]
  taskAssignees         TaskAssignee[]
  auditLogs             AuditLog[]
  readLogs              ReadLog[]
  // ユーザーが起票した次回議題。User 削除時は履歴保持のため Restrict する。
  topicRequests         TopicRequest[]
}

// 決定事項のステータス
enum DecisionItemStatus {
  draft
  reviewing
  open
  decided
  cancelled
}

// 決定事項の確定状態
enum DecisionState {
  confirmed
  tentative
  open
}

// 未決の理由
enum DecisionReason {
  no_consensus
  information_lack
  intentional_defer
  not_discussed
}

// タスクのステータス
enum TaskStatus {
  draft
  reviewing
  todo
  in_progress
  done
  rejected
}

// タスクの必須度
enum TaskPriority {
  required
  optional
}

// 次回会議の議題（TopicRequest）の必須度。
// AI 仕様の Task.priority と意味を揃えており、required は次回会議冒頭で必ず触れる前提。
// 将来分岐する可能性に備えて Task とは別 enum として定義する。
enum TopicRequestPriority {
  required
  optional
}

// 曖昧情報のステータス
enum AmbiguousInfoStatus {
  draft
  reviewing
  resolved
  rejected
}

// 曖昧情報の種別
enum AmbiguityType {
  missing_speaker
  transcription_error_low
  transcription_error_high
  no_assignee
  no_deadline_mentioned
  no_deadline_absolute
  unclear_decision
  insufficient_basis
  unclear_scope
}

// 曖昧情報の深刻度
enum AmbiguitySeverity {
  high
  medium
  low
}

// 曖昧情報の解消種別
enum ResolutionType {
  task
  decision_item
  discarded
}

// 話者の解決状態
enum ResolutionStatus {
  resolved
  unresolved
  unknown
}

// 所要時間見積もりの種別
enum EstimationBreakdownType {
  required_task_check
  open_issue_new
  open_issue_recurring
  overdue_task
  new_topic
  tentative_reconfirm
  buffer
}

// 組織内メンバー権限。owner は組織削除可、admin は招待・編集可、member は閲覧中心。
enum OrgRole {
  owner
  admin
  member
}

// 組織への招待状態。pending → accepted/expired/revoked のいずれかに遷移する。
// revoked は owner/admin が招待を取り消したケース。@@unique(organizationId, email, status)
// の制約により、取消後 (status=revoked) は同一 email への再招待が pending として作成可能。
enum InvitationStatus {
  pending
  accepted
  expired
  revoked
}

// 組織。所属メンバーと配下定例の親エンティティ。
model Organization {
  id          String   @id @default(cuid())
  name        String
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  memberships       OrganizationMembership[]
  invitations       OrganizationInvitation[]
  recurringMeetings RecurringMeeting[]
  // 組織スコープのタスク群。組織削除時はタスクごと削除する。
  tasks             Task[]
}

// 組織への所属。userId × organizationId を複合主キーとする。
model OrganizationMembership {
  userId         String
  organizationId String
  role           OrgRole
  joinedAt       DateTime @default(now())

  user         User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  @@id([userId, organizationId])
  @@index([organizationId])
}

// 組織への招待。inviter は履歴保持のため User 削除時 Restrict。
// 同一組織への同一メールアドレスの同一 status の招待は重複させない。
// role は招待承諾時に発行する membership のロール。owner 招待は API 層で禁止する。
model OrganizationInvitation {
  id             String           @id @default(cuid())
  organizationId String
  email          String
  invitedBy      String
  role           OrgRole          @default(member)
  expiresAt      DateTime
  status         InvitationStatus @default(pending)
  createdAt      DateTime         @default(now())

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  inviter      User         @relation("InvitedBy", fields: [invitedBy], references: [id], onDelete: Restrict)

  @@unique([organizationId, email, status])
  @@index([email])
}

// 定例会議。組織配下の継続的なミーティング枠。
// defaultDurationMinutes は配下に紐付く個別 Meeting（別 Issue で導入）の
// デフォルト所要時間。個別 Meeting 側で上書き調整される想定。
model RecurringMeeting {
  id                     String   @id @default(cuid())
  organizationId         String
  name                   String
  description            String?
  scheduleCron           String
  defaultDurationMinutes Int      @default(60)
  createdAt              DateTime @default(now())
  updatedAt              DateTime @updatedAt

  organization    Organization           @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  members         MeetingMember[]
  // 配下に開催される個別 Meeting 群。定例削除時は SetNull で紐付け解除のみ。
  meetings        Meeting[]
  // 定例に attach されたタスク（M:N 中間テーブル）。定例削除時は中間レコードのみ削除し、
  // タスク本体は Task.organizationId で組織スコープが保たれる限り残す。
  taskAttachments TaskRecurringMeeting[]

  @@index([organizationId])
}

// 定例ごとのメンバー。recurringMeetingId × userId を複合主キーとする。
enum MeetingRole {
  owner
  member
}

model MeetingMember {
  recurringMeetingId String
  userId             String
  role               MeetingRole
  joinedAt           DateTime    @default(now())

  recurringMeeting RecurringMeeting @relation(fields: [recurringMeetingId], references: [id], onDelete: Cascade)
  user             User             @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([recurringMeetingId, userId])
  @@index([userId])
}

// 会議ごとの話者情報。書き起こし上の呼称とDBユーザーの紐付け状態を管理する。
model MeetingSpeaker {
  id               String           @id @default(cuid())
  meetingId        String
  userId           String?
  name             String?
  resolutionStatus ResolutionStatus
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt

  meeting Meeting @relation(fields: [meetingId], references: [id], onDelete: Cascade)
  user    User?   @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@unique([meetingId, userId])
  @@index([meetingId])
}

// 次回会議の所要時間見積もり内訳。meetings.estimatedDurationMinutesの算出根拠を保持する。
model MeetingEstimationBreakdown {
  id        String                  @id @default(cuid())
  meetingId String
  type      EstimationBreakdownType
  count     Int
  minutes   Int
  createdAt DateTime                @default(now())
  updatedAt DateTime                @updatedAt

  meeting Meeting @relation(fields: [meetingId], references: [id], onDelete: Cascade)

  @@unique([meetingId, type])
  @@index([meetingId])
}

// AI Searchに登録するRAGインデックスドキュメント。1会議=1ドキュメント。
model RagDocument {
  id                     String    @id @default(cuid())
  meetingId              String    @unique
  themeKeywords          Json
  confirmedDecisionTexts Json
  openIssueTexts         Json
  participantNames       Json
  indexedAt              DateTime?
  createdAt              DateTime  @default(now())
  updatedAt              DateTime  @updatedAt

  meeting Meeting @relation(fields: [meetingId], references: [id], onDelete: Cascade)
}

// RAG検索で見つかった関連過去会議。recurring_flagで再議論検出に使用する。
model RelatedPastMeeting {
  id               String   @id @default(cuid())
  meetingId        String
  relatedMeetingId String
  relevanceSummary String
  recurringFlag    Boolean  @default(false)
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  meeting        Meeting @relation("CurrentMeeting", fields: [meetingId], references: [id], onDelete: Cascade)
  relatedMeeting Meeting @relation("RelatedMeeting", fields: [relatedMeetingId], references: [id], onDelete: Cascade)

  @@unique([meetingId, relatedMeetingId])
  @@index([meetingId])
  @@index([relatedMeetingId])
}

// 会議から抽出された決定事項・未決事項。
model DecisionItem {
  id               String             @id @default(cuid())
  meetingId        String
  title            String
  body             String?
  sourceQuote      String?
  sourceContext    String?
  status           DecisionItemStatus
  decisionState    DecisionState?
  reason           DecisionReason?
  blockingItemId   String?
  recurrenceCount  Int?
  ambiguityFlags   Json?
  decisionDeadline DateTime?
  plannedMeetingId String?
  decidedAt        DateTime?
  decidedBy        String?
  version          Int                @default(0)
  createdAt        DateTime           @default(now())
  updatedAt        DateTime           @updatedAt

  meeting        Meeting                @relation(fields: [meetingId], references: [id], onDelete: Cascade)
  plannedMeeting Meeting?               @relation("PlannedMeeting", fields: [plannedMeetingId], references: [id], onDelete: SetNull)
  decidedByUser  User?                  @relation(fields: [decidedBy], references: [id], onDelete: SetNull)
  assignees      DecisionItemAssignee[]
  tasks          Task[]
  ambiguousInfos AmbiguousInfo[]

  @@index([meetingId])
  @@index([status])
}

// 決定事項・未決事項の担当者。複数担当者に対応するための中間テーブル。
model DecisionItemAssignee {
  id             String @id @default(cuid())
  decisionItemId String
  userId         String

  decisionItem DecisionItem @relation(fields: [decisionItemId], references: [id], onDelete: Cascade)
  user         User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([decisionItemId, userId])
  @@index([decisionItemId])
}

// 会議から抽出された / 手動作成されたタスク。
// 組織スコープ必須 (organizationId)・発生源会議は任意 (originMeetingId)・
// 複数の定例（Project 相当）に M:N で紐付け可能 (TaskRecurringMeeting)。
// 将来 #153 で Project 層を導入する際は TaskRecurringMeeting の参照先を
// RecurringMeeting → Project に張り替えるだけで吸収できる構造としている。
model Task {
  id               String        @id @default(cuid())
  // 組織スコープ。recurringMeetings / originMeeting から派生可能だが、
  // 認可・フィルタの単純化のため非正規化で保持する。組織削除時はカスケード削除。
  organizationId   String
  // 発生源会議。AI 抽出タスクは抽出元の会議 ID が入る。手動作成タスクは null。
  // 会議が削除されてもタスク本体は残したいので SetNull。
  originMeetingId  String?
  decisionItemId   String?
  title            String
  body             String?
  sourceQuote      String?
  sourceContext    String?
  status           TaskStatus
  priority         TaskPriority?
  dueDateRaw       String?
  dueDateEstimated Boolean?
  assigneeRaw      String?
  blockingItemId   String?
  carriedOverCount Int?
  ambiguityFlags   Json?
  // AI フェーズ2 の進捗メモ。前回タスクが次回会議で言及・進捗報告された場合に記録する。
  // 手動経路では使用しない（API 層で書き込み禁止）。
  progressNote     String?
  dueDate          DateTime?
  startDate        DateTime?
  followUpDate     DateTime?
  version          Int           @default(0)
  createdAt        DateTime      @default(now())
  updatedAt        DateTime      @updatedAt

  organization      Organization           @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  originMeeting     Meeting?               @relation(fields: [originMeetingId], references: [id], onDelete: SetNull)
  decisionItem      DecisionItem?          @relation(fields: [decisionItemId], references: [id], onDelete: SetNull)
  assignees         TaskAssignee[]
  ambiguousInfos    AmbiguousInfo[]
  recurringMeetings TaskRecurringMeeting[]

  @@index([organizationId])
  @@index([originMeetingId])
  @@index([decisionItemId])
  @@index([dueDate])
  @@index([startDate])
  @@index([status])
}

// タスクの担当者。複数担当者に対応するための中間テーブル。
model TaskAssignee {
  id     String @id @default(cuid())
  taskId String
  userId String

  task Task @relation(fields: [taskId], references: [id], onDelete: Cascade)
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([taskId, userId])
  @@index([taskId])
}

// タスクと定例（Project 相当）の M:N 紐付け中間テーブル。
// Asana ライクに 1 つのタスクを複数の定例に attach 可能とする。
// 将来 #153 で Project 層を導入する場合、本テーブルの recurringMeetingId を
// projectId に張り替える（または TaskProject テーブルに移行する）方針。
// 中間レコードの整合性: task.organizationId と recurringMeeting.organizationId が
// 一致することを API 層で必須バリデーションとする（クロス組織アタッチ禁止）。
model TaskRecurringMeeting {
  taskId             String
  recurringMeetingId String

  task             Task             @relation(fields: [taskId], references: [id], onDelete: Cascade)
  recurringMeeting RecurringMeeting @relation(fields: [recurringMeetingId], references: [id], onDelete: Cascade)

  @@id([taskId, recurringMeetingId])
  @@index([recurringMeetingId])
}

// 会議中に発生した曖昧な情報。
model AmbiguousInfo {
  id                       String              @id @default(cuid())
  meetingId                String
  body                     String
  sourceQuote              String?
  sourceContext            String?
  status                   AmbiguousInfoStatus
  ambiguityType            AmbiguityType?
  severity                 AmbiguitySeverity?
  inferenceBasis           String?
  dueDateRaw               String?
  dueDateEstimated         Boolean?
  affectedItemIds          Json?
  resolutionType           ResolutionType?
  resolvedToTaskId         String?
  resolvedToDecisionItemId String?
  version                  Int                 @default(0)
  createdAt                DateTime            @default(now())
  updatedAt                DateTime            @updatedAt

  meeting            Meeting       @relation(fields: [meetingId], references: [id], onDelete: Cascade)
  resolvedToTask     Task?         @relation(fields: [resolvedToTaskId], references: [id], onDelete: SetNull)
  resolvedToDecision DecisionItem? @relation(fields: [resolvedToDecisionItemId], references: [id], onDelete: SetNull)

  @@index([meetingId])
  @@index([status])
}

// 次回会議に向けた、ユーザーが事前に登録する議題。
// AI が生成する recommendedAgenda（MeetingAnalysisRun.recommendedAgenda）とは別経路で、
// 議事録生成（フェーズ2）時にプロンプトへ user_topic_requests として注入される想定。
// meetingId は「議題を提示する次回会議」を指す。
model TopicRequest {
  id          String                @id @default(cuid())
  meetingId   String
  requestedBy String
  title       String
  body        String?
  priority    TopicRequestPriority?
  createdAt   DateTime              @default(now())
  updatedAt   DateTime              @updatedAt

  meeting   Meeting @relation(fields: [meetingId], references: [id], onDelete: Cascade)
  requester User    @relation(fields: [requestedBy], references: [id], onDelete: Restrict)

  @@index([meetingId])
  @@index([requestedBy])
}

// 解析ランの実行状態。queued → analyzing → completed | failed の遷移を取る。
enum AnalysisRunStatus {
  queued
  analyzing
  completed
  failed
}

// AI解析の実行履歴。1回の解析runごとに、最終JSON・検証警告・RAG検索ログなどを保持する。
// 業務状態の正本ではなく、監査・再現性・デバッグ・再実行比較のためのスナップショット。
model MeetingAnalysisRun {
  id        String @id @default(cuid())
  meetingId String

  // 実行状態
  status      AnalysisRunStatus @default(queued)
  currentStep String?
  triggerType String?

  // 再現性・監査
  modelName       String?
  apiVersion      String?
  promptVersion   String?
  pipelineVersion String?
  inputHash       String?
  transcriptText String?

  // UIでよく使う要約フィールド
  summary    String?
  alertLevel String?

  // JSONスナップショット
  reportJson         Json?
  rawOutputsJson     Json?
  validationWarnings Json?
  ragRetrievalJson   Json?
  recommendedAgenda  Json?
  resourceRefsJson   Json?

  // 実行時刻・失敗情報
  startedAt    DateTime?
  completedAt  DateTime?
  failedAt     DateTime?
  errorMessage String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  meeting Meeting @relation(fields: [meetingId], references: [id], onDelete: Cascade)

  @@index([meetingId])
  @@index([meetingId, status])
  @@index([meetingId, createdAt])
  @@index([status])
}

// 各リソースへの操作履歴。追記専用の不変ログ。
model AuditLog {
  id           String   @id @default(cuid())
  actorId      String
  resourceType String // task / decision_item / ambiguous_info など
  resourceId   String
  action       String // create / update / delete
  beforeValue  Json?
  afterValue   Json?
  createdAt    DateTime @default(now())

  actor User @relation(fields: [actorId], references: [id], onDelete: Restrict)

  @@index([resourceType, resourceId])
  @@index([actorId])
}

// ユーザーによるリソースの既読履歴。追記専用の不変ログ。
model ReadLog {
  id           String   @id @default(cuid())
  userId       String
  resourceType String // task / decision_item / ambiguous_info など
  resourceId   String
  readAt       DateTime @default(now())
  createdAt    DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, resourceType, resourceId])
}
